Bug 184273 - KMail message view doesn't stop scrolling after pressing Shift+[Arrow Key]
Summary: KMail message view doesn't stop scrolling after pressing Shift+[Arrow Key]
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.11.90
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-14 03:01 UTC by Jeffery MacEachern
Modified: 2009-09-06 13:29 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jeffery MacEachern 2009-02-14 03:01:16 UTC
Version:           1.11.0 (using 4.2.00 (KDE 4.2.0), Arch Linux)
Compiler:          gcc
OS:                Linux (i686) release 2.6.28-ARCH

Steps to Reproduce:
Open a received e-mail in the message view window, or the preview pane.  Press Shift+{up|down}, and the message scrolls.  Now press Shift+[opposite direction].

Expected Outcome:
One should be able to stop/change the direction of the scrolling in this way.

Actual Outcome:
The scroll speed becomes minimal, but still nonzero, and also becomes jerky.  Scrolling can be stopped by spinning the mouse wheel, or when it reaches the top or bottom of the message.

I hadn't encountered this feature at all before today, but I would assume that it shouldn't be behaving in this fashion.

Notes:
I don't imagine this should make a difference, but FWIW, I'm running KMail embedded into Kontact
Comment 1 Jaime Torres 2009-02-14 11:56:26 UTC
Confirmed in kmail 1.11.90 (kde 4.2.62) using kmail alone.
Comment 2 gmud 2009-02-17 10:22:03 UTC
Duplicate of bug #119281 ?
Comment 3 Jaime Torres 2009-02-17 10:49:37 UTC
Not a duplicate of that bug. This is not about drawing speed. 
This bug is about Shift up and shift down keys that never stop and never change direction.
It looks like shift up/down is reducing actual scroll speed by half, but never stops.
Comment 4 Martin Koller 2009-08-23 00:38:56 UTC
Actually this is a KHTML bug. it does not stop its internal scrolling timer when one calls  scrollBy() programmatically.
I sent a patch for review to the maintainers.
Comment 5 Martin Koller 2009-08-29 10:30:13 UTC
SVN commit 1016875 by mkoller:

BUG: 184273

Stop the internal scrolling timer when scrolling via the scrollBy() API method


 M  +2 -0      khtmlview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1016875
Comment 6 Martin Koller 2009-09-06 13:29:45 UTC
SVN commit 1020459 by mkoller:

Backport r1016875 by mkoller from trunk to the 4.3 branch:

CCBUG: 184273

Stop the internal scrolling timer when scrolling via the scrollBy() API method



 M  +2 -0      khtmlview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1020459