BUG: 184273

Stop the internal scrolling timer when scrolling via the scrollBy() API method

svn path=/trunk/KDE/kdelibs/; revision=1016875